metrics/observatorium-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: observability-observatorium
    app.kubernetes.io/name: observatorium-api
    app.kubernetes.io/part-of: observatorium
    app.kubernetes.io/version: latest
  name: observability-observatorium-observatorium-api
  namespace: open-cluster-management-observability
  ownerReferences:
  - apiVersion: core.observatorium.io/v1alpha1
    controller: true
    kind: Observatorium
    name: observability-observatorium
    uid: d9305eae-0bc4-4c02-8018-366a4b8f080c
spec:
  clusterIP: 172.30.111.236
  ports:
  - name: internal
    port: 8448
    protocol: TCP
    targetPort: 8448
  - name: public
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: observability-observatorium
    app.kubernetes.io/name: observatorium-api
    app.kubernetes.io/part-of: observatorium
  sessionAffinity: None
  type: ClusterIP
